// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div
  className="sub-header"
>
  <div
    className="content-container"
  >
    <h1
      className="sub-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totalling 
      <span>
        $19.65
      </span>
    </h1>
    <div
      className="sub-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/add"
      >
        Add expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div
  className="sub-header"
>
  <div
    className="content-container"
  >
    <h1
      className="sub-header__title"
    >
      Viewing 
      <span>
        21
      </span>
       
      expenses
       totalling 
      <span>
        $64,599,341.12
      </span>
    </h1>
    <div
      className="sub-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/add"
      >
        Add expense
      </Link>
    </div>
  </div>
</div>
`;
